[tool.poetry]
name = "repl_python3_TetrisMaster"
version = "0.1.0"
description = ""
authors = ["Mindcool225 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
pynput = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
